# casadocs

./: .gitignore  .gitmodules  .readthedocs.yaml  CAS-13490.txt  EphemerisObject_imaging.ipynb  LICENSE  README.md  asv.conf.json  buildme.sh  casa_fundamentals.ipynb  casapm.rst  external_data.ipynb  hashfile.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  task_defintent.rst
benchmarks/: bench_applycal.py  bench_flagdata.py  bench_gaincal.py  bench_sdatmcor.py  bench_sdbaseline.py  bench_sdcal.py  bench_sdimaging.py  bench_tclean_memory.py  bench_tclean_time.py  bench_tsdimaging.py  bench_uvcontsub.py  calibration.py  casademo.py  casatasks_tclean.py
community/: install_modular_casa_mac_arm.ipynb
docs/: .gitmodules  api.rst  api_baseline.txt  builds.txt  calibration.rst  casatasks_baseline.txt  casatools_baseline.txt  conf.py  dates.txt  docutils.conf  first_look_at_imaging.ipynb  imaging.rst  index.ipynb  index.rst  pullrequests.txt  pullrequests.xml  task_api.rst  tclean_test10.rst  tclean_test12.rst  tclean_test14.rst  tclean_test16.rst  tclean_test17.rst  tclean_test18.rst  tclean_test19.rst  tclean_test2.rst  tclean_test3.rst  tclean_test4.rst  tclean_test5.rst  tclean_test7.rst  tclean_test8.rst  tool_api.rst
markdown/: calibration-and-visibility-data.md  casa-development-team.md  casa-fundamentals.md  external-data.md  imaging.md  index.rst  introduction.md  memo-series.md  parallel-processing.md  pipeline.md  simulation.md  usingcasa.md
notebooks/: EphemerisObject_imaging.ipynb
results/: benchmarks.json
scraper/: _convert_html.py  (+2 more)
(+4445 files in other folders)
