[metadata]
name = casabench
version = 0.0.1
author = Common Astronomy Software Applications
author_email = casa-feedback@nrao.edu
description =  Tracking performance metrics of CASA
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://github.com/casangi/casabench
project_urls =
    Hosted Results = casangi.github.io/casabench/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    airspeed-velocity

[options.packages.find]
where = src
